ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website.com
spec:
  rules:
  - host: website.com
    http:
      paths:
      - backend:
          service:
            name: website-svc
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
